# puckhate

./: .dockerignore  .env.example  .env.prod.secret  .env.staging.secret  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
backend/api/: admin.py  banned_words.json.secret  banned_words.py  emails.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/api/management/commands/: daily_email_summary.py  hourly_email_summary.py  seed_test_data.py  update_goals_scored.py
backend/api/migrations/: 0001_initial.py  0002_seed_charities.py  0002_seed_data.py  0003_donation_approval_notes.py  0004_donation_ip_donationreceipt_ip_ban.py  0005_create_admin_groups.py
backend/api/static/api/: receipt_admin.css
backend/api/tests/: base.py  factories.py
backend/api/tests/commands/: test_cleanup.py  test_email.py  test_exchange_rate.py  test_goals.py  test_seed.py
backend/api/tests/unit/: test_models.py  test_utils_validators.py
backend/libraries/currencylayer/: client.py
backend/libraries/hockeytech/: __init__.py  client.py  exceptions.py
backend/puckcurl/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/puckhate/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
backend/templates/admin/: base_site.html
backend/templates/emails/: admin_base.html  donations_pending_daily.html  donations_pending_daily.txt  donations_pending_hourly.html  donations_pending_hourly.txt
docs/: API.md  (+8 more)
(+71 files in other folders)
